--- a/Livret_Cycle_02/Ch_02_Rapidite/Cycle_02_Livret_Ch_02_Rapidite.tex
+++ b/Livret_Cycle_02/Ch_02_Rapidite/Cycle_02_Livret_Ch_02_Rapidite.tex
@@ -51,12 +51,12 @@
 \input{../../Chapitre_02_Rapidite/TD_01_RobotClimber/Cy_02_Ch_02_TD_01_RobotClimber.tex}
 
 
-% TD 1 Robovolc Vuibert
+% TD 1 Robotclimber Vuibert
 %%% PAS DE CORRIGE !!!
 \newpage
 \fichetrue \proftrue \tdtrue \coursfalse
 \graphicspath{{../../style/png/}{../../Chapitre_02_Rapidite/TD_01_RobotClimber/images/}}
-\input{../../Chapitre_02_Rapidite/TD_01_RobotClimber/Cy_02_Ch_02_TD_01_RobotClimber.tex}
+%\input{../../Chapitre_02_Rapidite/TD_01_RobotClimber/Cy_02_Ch_02_TD_01_RobotClimber.tex}
 
 
 % TD 2 Radar F Mathurin
@@ -71,7 +71,7 @@
 \newpage
 \fichetrue \proftrue \tdtrue \coursfalse
 \graphicspath{{../../style/png/}{../../Chapitre_02_Rapidite/TD_02_Radar/images/}}
-\input{../../Chapitre_02_Rapidite/TD_02_Radar/Cy_02_Ch_02_TD_02_Radar.tex}
+%\input{../../Chapitre_02_Rapidite/TD_02_Radar/Cy_02_Ch_02_TD_02_Radar.tex}
 
 
 %% TD 2 Stabilisateur caméra Mines ponts 2018
