--- a/Livret_Cycle_02/Ch_03_Precision/Cycle_02_Livret_Ch_03_Precision.tex
+++ b/Livret_Cycle_02/Ch_03_Precision/Cycle_02_Livret_Ch_03_Precision.tex
@@ -26,7 +26,7 @@
 \newpage
 \fichetrue \proftrue \tdtrue \coursfalse
 \graphicspath{{../../style/png/}{../../Chapitre_03_Precision/Activation_AssemblageFalcon/images/}}
-\input{../../Chapitre_03_Precision/Activation_AssemblageFalcon/Cy_02_03_Activation.tex}
+%\input{../../Chapitre_03_Precision/Activation_AssemblageFalcon/Cy_02_03_Activation.tex}
 
 % Application
 % Sujet
@@ -39,7 +39,7 @@
 \newpage
 \fichetrue \proftrue \tdtrue \coursfalse
 \graphicspath{{../../style/png/}{../../Chapitre_03_Precision/Application_01/images/}}
-\input{../../Chapitre_03_Precision/Application_01/Cy_02_Ch_03_Application_01.tex}
+%\input{../../Chapitre_03_Precision/Application_01/Cy_02_Ch_03_Application_01.tex}
 %
 %
 
@@ -55,7 +55,7 @@
 \newpage
 \fichetrue \proftrue \tdtrue \coursfalse
 \graphicspath{{../../style/png/}{../../Chapitre_03_Precision/TD_01_FauteuilDynamique/images/}}
-\input{../../Chapitre_03_Precision/TD_01_FauteuilDynamique/Cy_02_Ch_03_TD_01_FauteuilDynamique.tex}
+%\input{../../Chapitre_03_Precision/TD_01_FauteuilDynamique/Cy_02_Ch_03_TD_01_FauteuilDynamique.tex}
 
 %%% TD 2 Segway - Vuibert
 %% Sujet
@@ -69,7 +69,7 @@
 \newpage
 \fichetrue \proftrue \tdtrue \coursfalse
 \graphicspath{{../../style/png/}{../../Chapitre_03_Precision/TD_02_Segway_Vuibert/images/}}
-\input{../../Chapitre_03_Precision/TD_02_Segway_Vuibert/Cy_02_Ch_03_TD_02_SegwayVuibert.tex}
+%\input{../../Chapitre_03_Precision/TD_02_Segway_Vuibert/Cy_02_Ch_03_TD_02_SegwayVuibert.tex}
 
 
 
