--- a/Livret_Cycle_02/Ch_01_Stabilite/Cycle_02_Livret_Ch_01_Stabilite.tex
+++ b/Livret_Cycle_02/Ch_01_Stabilite/Cycle_02_Livret_Ch_01_Stabilite.tex
@@ -61,13 +61,13 @@
 \newpage
 \fichetrue \proffalse \tdtrue \coursfalse \normalfalse \difficiletrue  \tdifficilefalse \collefalse
 \graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/TD_02_Stabilisateur/images/}}
-%\input{../../Chapitre_01_Stabilite/TD_02_Stabilisateur/Cy_02_Ch_01_TD_02_Stabilisateur.tex}
+\input{../../Chapitre_01_Stabilite/TD_02_Stabilisateur/Cy_02_Ch_01_TD_02_Stabilisateur.tex}
 
 % Corrigé
 \newpage 
 \fichetrue \proftrue \tdtrue \coursfalse \normalfalse \difficiletrue  \tdifficilefalse \collefalse
 \graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/TD_02_Stabilisateur/images/}}
-%\input{../../Chapitre_01_Stabilite/TD_02_Stabilisateur/Cy_02_Ch_01_TD_02_Stabilisateur.tex}
+\input{../../Chapitre_01_Stabilite/TD_02_Stabilisateur/Cy_02_Ch_01_TD_02_Stabilisateur.tex}
 
 
 \end{document}
