--- a/style/new_style.tex
+++ b/style/new_style.tex
@@ -11,7 +11,7 @@
 %----------------------------------------------------------------------------------------
 
 %\usepackage[top=2.5cm,bottom=2cm,left=2cm,right=2cm,headsep=40pt,a4paper]{geometry} % Page margins
-\usepackage[top=2cm,bottom=3cm,left=2cm,right=2cm,a4paper]{geometry} % Page margins
+\usepackage[top=2cm,bottom=2cm,left=2cm,right=2cm,a4paper]{geometry} % Page margins
 
 \usepackage{graphicx} % Required for including pictures
 
@@ -35,11 +35,12 @@
 \usepackage{pifont} % Pour les dinglist
 \usepackage{multicol}
 \usepackage{array} % Centrage vertical dans les tableaux
+\usepackage{schemabloc}
 
 %----------------------------------------------------------------------------------------
 %	FONTS
 %----------------------------------------------------------------------------------------
-
+\usepackage{bm}
 \usepackage{multicol}
 \usepackage{siunitx}
 \sisetup{output-decimal-marker = {,}}
@@ -171,9 +172,14 @@
  
  % ENTETES de page
  \fancyhead[L]{%
- \noindent\begin{minipage}[c]{2.6cm}%
- \includegraphics[width=2cm]{logo_lycee.png}%
- \end{minipage}}
+ \begin{tikzpicture}[overlay]
+\node(logo) at (1,0)
+    {\includegraphics[width=2cm]{logo_lycee.png}};
+\end{tikzpicture}
+ %\noindent\begin{minipage}[c]{2.6cm}%
+ %\includegraphics[width=2cm]{logo_lycee.png}%
+ %\end{minipage}
+}
 
 \fancyhead[C]{\rule{8cm}{.5pt}}
 
@@ -249,6 +255,7 @@
 \end{minipage}}
 \fancyfoot[R]{\footnotesize{\xxpied}}
 }
+
 
 
 
@@ -373,6 +380,7 @@
 \newtheorem{vocabulary}{Vocabulaire}[section]
 %\newtheorem{definitionT}{Definition}[section]
 \newtheorem{definitionT}{Définition}[section]
+\newtheorem{propT}{Propriété}[section]
 \newtheorem{rappelT}{Rappel}[section]
 \newtheorem{demoT}{Démonstration}[section]
 \newtheorem{corollaryT}[dummy]{Corollaire}
@@ -657,7 +665,8 @@ innerbottommargin=5pt]{sqlBox}
 \newenvironment{exercise}{\begin{eBox}\begin{exerciseT}}{\hfill{\color{ocre}\tiny\ensuremath{\blacksquare}}\end{exerciseT}\end{eBox}}				  
 \newenvironment{exercice}{\begin{eBox}\begin{exerciseT}}{\hfill{\color{ocre}\tiny\ensuremath{\blacksquare}}\end{exerciseT}\end{eBox}}				  
 
-\newenvironment{definition}{\begin{dBox}\begin{definitionT}}{\end{definitionT}\end{dBox}}	
+\newenvironment{definition}{\begin{dBox}\begin{definitionT}}{\end{definitionT}\end{dBox}}
+\newenvironment{prop}{\begin{dBox}\begin{propT}}{\end{propT}\end{dBox}}	
 \newenvironment{rappel}{\begin{dBox}\begin{rappelT}}{\end{rappelT}\end{dBox}}	
 \newenvironment{defi}{\begin{dBox}\begin{definitionT}}{\end{definitionT}\end{dBox}}	
 \newenvironment{demo}{\begin{demoBox}\begin{demoT}}{\end{demoT}\end{demoBox}}	
