--- a/Livret_Cycle_02/Ch_01_Stabilite/Cycle_02_Livret_Ch_01_Stabilite.tex
+++ b/Livret_Cycle_02/Ch_01_Stabilite/Cycle_02_Livret_Ch_01_Stabilite.tex
@@ -10,6 +10,11 @@
 
 \livrettrue
 
+\def\xxYCartouche{-2.25cm}
+\def\xxYongletGarde{.9cm}
+\def\xxYOnget{.9cm}
+
+
 \begin{document}
 % Cours
 \graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/Cours/images/}}
@@ -46,13 +51,13 @@
 % Sujet
 \newpage
 \fichetrue \proffalse \tdtrue \coursfalse
-\graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/TD_01_Drone/images/}}
-\input{../../Chapitre_01_Stabilite/TD_01_Drone/Cy_02_Ch_01_TD_02_Drone.tex}
+\graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/Cy_02_Ch_01_TD_01_Drone/images/}}
+\input{../../Chapitre_01_Stabilite/Cy_02_Ch_01_TD_01_Drone/Cy_02_Ch_01_TD_02_Drone.tex}
 
 %% PAS DE CORRIGE !!!
 \newpage
 \fichetrue \proftrue \tdtrue \coursfalse
-\graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/TD_01_Drone/images/}}
+\graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/Cy_02_Ch_01_TD_01_Drone/images/}}
 %\input{../../Chapitre_01_Stabilite/TD_01_Drone/Cy_02_Ch_01_TD_02_Drone.tex}
 
 
@@ -60,14 +65,14 @@
 % Sujet Difficile
 \newpage
 \fichetrue \proffalse \tdtrue \coursfalse \normalfalse \difficiletrue  \tdifficilefalse \collefalse
-\graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/TD_02_Stabilisateur/images/}}
-\input{../../Chapitre_01_Stabilite/TD_02_Stabilisateur/Cy_02_Ch_01_TD_02_Stabilisateur.tex}
+\graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/Cy_02_Ch_01_TD_02_Stabilisateur/images/}}
+\input{../../Chapitre_01_Stabilite/Cy_02_Ch_01_TD_02_Stabilisateur/Cy_02_Ch_01_TD_02_Stabilisateur.tex}
 
 % Corrigé
 \newpage 
 \fichetrue \proftrue \tdtrue \coursfalse \normalfalse \difficiletrue  \tdifficilefalse \collefalse
-\graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/TD_02_Stabilisateur/images/}}
-\input{../../Chapitre_01_Stabilite/TD_02_Stabilisateur/Cy_02_Ch_01_TD_02_Stabilisateur.tex}
+\graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/Cy_02_Ch_01_TD_02_Stabilisateur/images/}}
+%\input{../../Chapitre_01_Stabilite/Cy_02_Ch_01_TD_02_Stabilisateur/Cy_02_Ch_01_TD_02_Stabilisateur.tex}
 
 
 \end{document}
