--- a/Livret_Cycle_02/Ch_02_Rapidite/Cycle_02_Livret_Ch_02_Rapidite.tex
+++ b/Livret_Cycle_02/Ch_02_Rapidite/Cycle_02_Livret_Ch_02_Rapidite.tex
@@ -10,10 +10,18 @@
 
 \livrettrue
 
+
+\def\xxYCartouche{-2.25cm}
+\def\xxYongletGarde{.9cm}
+\def\xxYOnget{.9cm}
+
 \begin{document}
 % Cours
 \graphicspath{{../../style/png/}{../../Chapitre_02_Rapidite/Cours/images/}}
 \input{../../Chapitre_02_Rapidite/Cours/Cy_02_Ch_02_Rapidite_Cours.tex}
+
+\def\xxYongletGarde{1.1cm}
+\def\xxYOnget{1.1cm}
 
 %% Activation
 %% Sujet
