--- a/Livret_Cycle_02/Ch_03_Precision/Cycle_02_Livret_Ch_03_Precision.tex
+++ b/Livret_Cycle_02/Ch_03_Precision/Cycle_02_Livret_Ch_03_Precision.tex
@@ -7,6 +7,9 @@
 \input{../../style/macros_SII}
 \input{../../style/Cycle_02_Entete}
 
+\def\xxYCartouche{-2.25cm}
+\def\xxYongletGarde{.9cm}
+\def\xxYOnget{.9cm}
 
 \livrettrue
 
@@ -14,6 +17,10 @@
 % Cours
 \graphicspath{{../../style/png/}{../../Chapitre_03_Precision/Cours/images/}}
 \input{../../Chapitre_03_Precision/Cours/Cy_02_Ch_03_Precision_Cours.tex}
+
+
+\def\xxYongletGarde{1.1cm}
+\def\xxYOnget{1.1cm}
 
 % Activation
 % Sujet
