--- a/Livret_Cycle_02/Ch_01_Stabilite/Cycle_02_Livret_Ch_01_Stabilite_PROF.tex
+++ b/Livret_Cycle_02/Ch_01_Stabilite/Cycle_02_Livret_Ch_01_Stabilite_PROF.tex
@@ -10,6 +10,10 @@
 
 \livrettrue
 
+\def\xxYCartouche{-2.25cm}
+\def\xxYongletGarde{.9cm}
+\def\xxYOnget{.9cm}
+
 \begin{document}
 % Cours
 \graphicspath{{../../style/png/}{../../Chapitre_01_Stabilite/Cours/images/}}
